src/warcraft/components/correct/tests/HotelDeVilleTestsCorrect.java
package warcraft.components.correct.tests;

import warcraft.components.correct.HotelDeVille;
import warcraft.components.tests.AbstractHotelDeVilleTests;

public class HotelDeVilleTestsCorrect extends AbstractHotelDeVilleTests {

	@Override
	public void before() {
		hotel=new HotelDeVille();
	}

}
